--- a/src/HTML/index.html
+++ b/src/HTML/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'">
-    <link href="./src/CSS/styles.css" rel="stylesheet">
-    <script type="module" src="./src/JS/javascript.js" defer></script>
-    <script type="module" src="./src/JS/addNewScheduleDay.js" defer></script>
+    <link href="../CSS/styles.css" rel="stylesheet">
+    <script type="module" src="../JS/addNewScheduleDay.js" defer></script>
+    <script type="module" src="../JS/javascript.js" defer></script>
     <title>schedule</title>
   </head>
   <body>
-    <div class="menu">
+    <input type="checkbox" id="checkbox-open-menu">
 
+    <div class="menu">      
+      <a href="./src/HTML/settings.html">ir para configurações</a>
     </div>
  
     <div class="modal">
@@ -32,7 +34,7 @@
             <div class="add-item" id="0">
               <input>
               <div>
-                <img src="./src/Medias/PNG/tash.png">
+                <img src="../Medias/PNG/tash.png">
               </div>
             </div>
 
@@ -53,12 +55,12 @@
     <header>
 
       <div class="menu-bar">
-        <div class="menu-bar-button">
-          
-        </div>
+        <label for="checkbox-open-menu">
+          <div class="menu-bar-button"></div>
+        </label>
       </div>
       <div class="banner">
-        <img src="./src/Medias/PNG/logo.png">
+        <img src="../Medias/PNG/logo.png">
       </div>
       <div class="time">
         <p id="time"></p>
@@ -70,6 +72,7 @@
 
       <div class="list-schedule">
 
+        
 
       </div>
 
